# speaky

./: .gitignore  README.md  build-deb.sh  build.py  config.example.yaml  mcp.yaml  pyproject.toml  run_speaky.py  speaky.spec  start-mac.sh  start.bat  start.sh
.github/workflows/: release.yml
demo/: record_audio.py  sauc_websocket_demo.py  test_realtime_streaming.py  test_realtime_with_file.py  test_streaming.py  test_ui.py
docs/: TODO.md  ai_key_design_v2.md  floating_window_redesign.md  安装问题.md
docs/产品文档/: AI键PRD.md  功能列表.md
docs/安装指南/: 浏览器扩展安装.md
docs/设计文档/: LLM_Agent设计.md  LLM悬浮窗设计.md
docs/调研报告/: PowerToys调研.md
scripts/: install_mcp.sh  setup.sh
speaky/: audio.py  autostart.py  config.py  history.py  hotkey.py  i18n.py  input_method.py  main.py  paths.py  sound.py  window_info.py
speaky-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  start-tauri.sh  tsconfig.json  vite.config.ts
speaky-tauri/locales/: de.yaml  en.yaml  ja.yaml  ko.yaml  zh.yaml
speaky-tauri/src/: App.svelte  main.ts
speaky-tauri/src-tauri/: Cargo.toml  tauri.conf.json
speaky-tauri/src-tauri/icons/: .gitkeep
speaky-tauri/src-tauri/src/: lib.rs  main.rs
speaky-tauri/src-tauri/src/audio/: mod.rs  recorder.rs
speaky-tauri/src-tauri/src/commands/: mod.rs
speaky-tauri/src-tauri/src/config/: mod.rs
speaky-tauri/src-tauri/src/engines/: mod.rs  openai.rs  volcengine.rs
speaky-tauri/src-tauri/src/hotkey/: listener.rs  mod.rs
speaky-tauri/src-tauri/src/input/: clipboard.rs  mod.rs
speaky-tauri/src-tauri/src/window_info/: mod.rs
speaky-tauri/src/lib/components/: AppIconOrb.svelte  FloatingWindow.svelte  SettingsDialog.svelte
speaky-tauri/src/lib/stores/: app.ts  config.ts  i18n.ts
speaky-tauri/src/lib/utils/: tauri.ts
speaky-tauri/src/styles/: app.css
speaky/engines/: __init__.py  base.py  openai_engine.py  tencent_engine.py  volc_bigmodel_engine.py  volcengine_engine.py  whisper_engine.py  whisper_model_manager.py  whisper_remote_engine.py
speaky/handlers/: __init__.py  ai_handler.py  base.py  llm_agent.py  voice_handler.py
speaky/llm/: __init__.py  client.py  models.py  prompts.py  types.py
speaky/locales/: de.yaml  en.yaml  es.yaml  fr.yaml  ja.yaml  ko.yaml  pt.yaml  ru.yaml  zh.yaml  zh_TW.yaml
speaky/ui/: __init__.py  floating_window.py  log_viewer.py  model_download_widget.py  settings_dialog.py  tray_icon.py
src/speek_input/: config.py  hotkey.py  input_method.py  main.py
src/speek_input.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/speek_input/engines/: __init__.py  aliyun_engine.py  tencent_engine.py  volcengine_engine.py  whisper_engine.py
src/speek_input/ui/: __init__.py  floating_window.py  settings_dialog.py  tray_icon.py
