[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaky"
version = "1.0.0"
description = "Voice input tool with hotkey activation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15",
    "pynput>=1.7",
    "pyaudio>=0.2.13",
    "numpy>=1.20",
    "pyyaml>=6.0",
    "openai>=1.0",
    "requests>=2.28",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "python-socks>=2.7.3",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]
faster-whisper = [
    "faster-whisper>=0.10",
]

[project.scripts]
speaky = "speaky.main:main"

[project.gui-scripts]
speaky-gui = "speaky.main:main"

[tool.setuptools.packages.find]
where = ["."]
