[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaky"
version = "1.0.0"
description = "Voice input tool with hotkey activation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5",
    "PySide6-Fluent-Widgets>=1.5",
    "pynput>=1.7",
    "pyaudio>=0.2.13",
    "numpy>=1.20",
    "pyyaml>=6.0",
    "openai>=1.0",
    "requests>=2.28",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "python-socks>=2.7.3",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "faster-whisper>=1.2.1",
    "modelscope",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]
faster-whisper = [
    "faster-whisper>=0.10",
]

[project.scripts]
speaky = "speaky.main:main"

[project.gui-scripts]
speaky-gui = "speaky.main:main"

[tool.setuptools.packages.find]
where = ["."]
