[package]
name = "speaky"
version = "1.0.0"
description = "Cross-platform voice input tool"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "speaky_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
# Note: Using rdev instead of tauri-plugin-global-shortcut for modifier key support
tauri-plugin-clipboard-manager = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Compression
flate2 = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
byteorder = "1"
regex = "1"
base64 = "0.22"

# Keyboard listener (for modifier key detection)
rdev = "0.5"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
